# E-Commerce-Analytics-Intelligence-Platform

./: .coverage  .coveragerc  .env.example  .flake8  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt  setup_project.py
data/: customers.csv  order_items.csv  orders.csv  products.csv
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
reports/: report_index.json
scripts/: validate_installation.py
src/: __init__.py  app.py  cli.py  scheduler.py
src/analytics/: __init__.py  kpi_calculator.py  ltv_engine.py  rfm_engine.py
src/db/: __init__.py  database.py  schema.sql
src/ecommerce_analytics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/engine/: __init__.py  exceptions.py  query_engine.py  query_library.py
src/engine/queries/: 01_revenue_by_period.sql  02_revenue_growth.sql  03_top_products.sql  04_bottom_products.sql  05_category_performance.sql  06_customer_orders.sql  (+9 more)
src/ingestion/: __init__.py  data_generator.py  loader.py  models.py  pipeline.py  validator.py
src/utils/: __init__.py  logger.py  retry.py
src/visualisation/: __init__.py  base_chart.py  chart_factory.py  dashboard.py  exporter.py  report_composer.py  theme.py
tests/: conftest.py  test_charts.py  test_cli.py  test_coverage_boost.py  test_dashboard.py  test_data_generator.py  test_exporter.py  test_integration.py  test_kpi_calculator.py  test_loader.py  test_ltv_engine.py  test_models.py  test_query_engine.py  test_query_library.py  test_resilience.py  test_rfm_engine.py  test_scheduler.py  test_validator.py
(+9 files in other folders)
