[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-analytics"
version = "1.0.0"
description = "E-Commerce Analytics & Intelligence Platform"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-fail-under=80 -v"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring (we use our own)
    "R0903",  # too-few-public-methods
    "W0511",  # fixme
]
max-line-length = 100

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-attributes = 15
